# trendscope

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MIGRATION_PLAN.md  Makefile  README.md  pyproject.toml  requirements.txt
.astro/: config.yaml
.github/workflows/: ci.yml
config/: settings.yaml  universe.yaml
dags/: trendscope_daily.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: _marts__models.yml  dim_tickers.sql  fct_daily_prices.sql  fct_daily_signals.sql  fct_market_breadth.sql  fct_returns.sql
dbt/models/staging/: _staging__models.yml  _staging__sources.yml  stg_prices.sql  stg_tickers.sql
dbt/seeds/: _seeds.yml  sector_etf_map.csv
dbt/seeds/ci_fixtures/: raw_prices_sample.csv  raw_tickers_sample.csv
dbt/snapshots/: tickers_snapshot.sql
dbt/tests/: assert_no_future_dated_rows.sql  assert_no_negative_prices.sql  assert_trading_calendar_gaps.sql
src/trendscope/: __init__.py  cli.py  log.py  settings.py  universe.py
src/trendscope/data/: __init__.py  ingest.py  schema.sql
src/trendscope/digest/: __init__.py  filters.py  llm.py  news.py  pipeline.py  render.py
src/trendscope/signals/: __init__.py  breadth.py  compute.py  fundamentals.py  meanrev.py  momentum.py  relative.py  trend.py  volatility.py  volume.py
tests/: conftest.py  test_digest.py  test_ingest.py  test_settings.py  test_signals.py  test_universe.py
