[project]
name = "trendscope"
version = "0.1.0"
description = "Personal market-trend detection: descriptive analytics over a configurable universe of tickers."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Aditya Khadye" }]
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.40.0",
    "dbt-core>=1.9,<2.0",
    "dbt-duckdb>=1.9,<2.0",
    "duckdb>=1.0.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "typer>=0.12",
    "yfinance>=0.2.40",
]

# pandas-ta is omitted intentionally for now: upstream 0.3.14b0 has known
# pandas>=2.0 incompat (uses removed `pandas.np`). When Phase 2 lands we'll
# choose between pandas-ta-classic, ta-lib (homebrew C dep), or hand-rolled
# indicators. Whichever wins, it gets pinned here.

[project.scripts]
trendscope = "trendscope.cli:app"

[dependency-groups]
dev = [
    "freezegun>=1.5",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trendscope"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["yfinance.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "TID", # tidy-imports
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

# Explicit isort sectioning — without this, ruff's autodetection can disagree
# across platforms (macOS arm64 vs Linux x86_64) on whether a path is
# first-party vs local-folder, producing inconsistent I001 verdicts.
[tool.ruff.lint.isort]
known-first-party = ["trendscope"]
known-local-folder = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:yfinance.*",
    "ignore::FutureWarning:yfinance.*",
]
